--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,6 +1,7 @@
 
 body
 {
+    background-color: rgb(29, 50, 68);
     color: #333;
     text-align: center;
     font-family: Arial, Helvetica, sans-serif;
@@ -25,6 +26,7 @@ body
 }
 #container
 {
+    background-color: cadetblue;
     width: 70%;
     padding: 1em;
     text-align: left;
