--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,7 +1,7 @@
 
 body
 {
-    background-color: rgb(29, 50, 68);
+    background-color: #086366;
     color: #333;
     text-align: center;
     font-family: Arial, Helvetica, sans-serif;
@@ -46,7 +46,7 @@ body
     padding: 1em;
     font-size: 0.8em;
 
-    background-color: rgb(29, 50, 68);
+    background-color: #086366;
     color: white;
     font-weight: bold;
     margin: 0;
